deploy/dev/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ingress-dev
spec:
  controllerName: lstoll.com/ingress
