deploy/dev/backend-http-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend-http
  template:
    metadata:
      labels:
        app: demo-backend-http
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: demo-backend-http-nginx
