deploy/dev/backend-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-http
  labels:
    ingress.lds.li/instance: "ingress1"
  annotations:
    ingress.lds.li/mode: "tls-termination"
    ingress.lds.li/sni-hostnames: "term.localtest.me"
spec:
  selector:
    app: demo-backend-http
  ports:
    - name: http
      port: 8080
      targetPort: 8080
