deploy/dev/backend-https-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-https
  labels:
    ingress.lds.li/instance: "ingress1"
  annotations:
    ingress.lds.li/mode: "https"
    ingress.lds.li/hostnames: "https.localtest.me"
spec:
  selector:
    app: demo-backend-http
  ports:
    - name: http
      port: 8080
      targetPort: 8080
