deploy/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
  labels:
    ingress.lds.li/instance: "ingress1"
  annotations:
    ingress.lds.li/mode: "tls-passthrough"
    ingress.lds.li/sni-hostnames: "pass.localtest.me"
spec:
  selector:
    app: demo-backend
  ports:
    - name: https
      port: 8443
      targetPort: 8443
