deploy/dev/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    app: ingress
  type: NodePort
  ports:
    - name: tls
      port: 443
      targetPort: 443
      nodePort: 30443
