deploy/dev/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: demo-pass
  annotations:
    service.beta.lds.li/disable-proxy-proto: "true"
spec:
  parentRefs:
    - name: ingress
      sectionName: pass-tls
  hostnames:
    - pass.localtest.me
  rules:
    - backendRefs:
        - name: demo-backend
          kind: Service
          port: 8443
